# frozenenv

./: .gitignore  LICENSE  README.md  pyproject.toml
src/envclass/: __init__.py  py.typed
src/envclass.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_envclass.py
