[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frozenenv"
version = "0.1.1"
description = "Typed environment variables as a frozen dataclass — zero dependencies"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Abdillah Issa", email = "hudihudiabdillah@gmail.com" }]
keywords = ["environment", "config", "dotenv", "settings", "typed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []   # ← zero deps, intentional

[project.urls]
Homepage = "https://github.com/hudihi/frozenenv"
Repository = "https://github.com/hudihi/frozenenv"
Issues = "https://github.com/hudihi/frozenenv/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/envclass"]

[tool.pytest.ini_options]
testpaths = ["tests"]